@@ -30,6 +30,7 @@ import net.mcreator.ui.views.ViewBase;
 import net.mcreator.util.ListUtils;
 import net.mcreator.util.StringUtils;
 import net.mcreator.util.image.EmptyIcon;
+import net.mcreator.util.image.IconUtils;
 import net.mcreator.util.image.ImageUtils;
 
 import javax.swing.*;
@@ -243,7 +244,7 @@ public class MCreatorTabs {
 
 			if (tab.equals(this.current))
 				if (!showTab(this.previous)) {
-					showTab(tabs.get(0));
+					showTab(tabs.getFirst());
 				}
 
 			if (tab.tabClosedListener != null)
@@ -389,6 +390,8 @@ public class MCreatorTabs {
 		}
 
 		public void setText(String name) {
+			this.text = name;
+
 			if (uppercase)
 				name = name.toUpperCase(Locale.ENGLISH);
 			blo.setText(name);
@@ -406,7 +409,7 @@ public class MCreatorTabs {
 
 		public void setIcon(ImageIcon icon) {
 			if (icon.getIconWidth() > 24 || icon.getIconHeight() > 24)
-				icon = new ImageIcon(ImageUtils.resizeAA(icon.getImage(), 24, 24));
+				icon = IconUtils.resize(icon, 24, 24);
 			else if (icon.getIconWidth() < 24 || icon.getIconHeight() < 24) {
 				icon = ImageUtils.drawOver(new EmptyIcon.ImageIcon(24, 24), icon, 12 - icon.getIconWidth() / 2,
 						12 - icon.getIconHeight() / 2, icon.getIconWidth(), icon.getIconHeight());
